chap03/3-12.grm
%{
#include <stdio.h>
#include "util.h"
#include "errormsg.h"

int yylex(void); /* function prototype */

void yyerror(char *s)
{
 EM_error(EM_tokPos, "%s", s);
}
%}


%union {
        int pos;
        int ival;
        string sval;
        }

%token <sval> ID STRING
%token <ival> INT

%token
  ASSIGN WHILE DO BEGIN END IF THEN ELSE SEMI

%start prog

%%

prog : stmlist
stm : ID ASSIGN ID
    | WHILE ID DO stm
    | BEGIN stmlist END
    | IF ID THEN stm
    | IF ID THEN stm ELSE stm
    ;

stmlist : stm
        | stmlist SEMI stm
        ;
